# sematnic_code_clones

./: .gitignore  README.md  pyproject.toml
Amain/: 1viewer.py  WIP.ipynb  classification.py  get_distance.py  main.py  produce_new_dataset.py  updateBCB.pkl.py
Amain/original/: exploring.ipynb
GonerCode/: ast_generation_and_division.py  get_method_vector.py  get_similarity_feature.py
old/: 1viewer.py  classification.py  clustering_kmeans.py  cosine_similarity.py  get_distance.py  get_matrix.py  pickle_dataset.py  testing.ipynb  updateBCB.pkl.py
