[project]
name = "sematnic-code-clones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.18",
    "anytree>=2.12.1",
    "bio>=1.6.2",
    "hf-xet>=1.1.0",
    "ipykernel>=6.29.5",
    "javalang>=0.13.0",
    "jellyfish>=1.2.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
]
